--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 100px;
 
   .btn-previous {
     border: none;
