--- a/src/Components/TextInputComponent/styles.scss
+++ b/src/Components/TextInputComponent/styles.scss
@@ -1,22 +1,13 @@
-// .input-data {
-//   display: flex;
-//   justify-content: center;
-//   flex-wrap: wrap;
-//   margin: 0 auto;
-//   width: 80%;
-// }
-
 .input-form {
   flex: 1;
   padding: 20px;
   width: 80%;
-
   .input {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 54px;
+    height: 40px;
     border-radius: 27px;
     background: #ffffff;
     border: 1px solid #1e85fe;
@@ -28,11 +19,16 @@
 
   .text-error {
     color: red;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    display: flex;
   }
 }
-.input-form:nth-child(3) {
-  flex-basis: 100%;
-}
+// .input-form:nth-child(3) {
+//   flex-basis: 100%;
+// }
 
 .input::placeholder {
   color: #d3d3d3;
