--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -31,6 +31,7 @@
     justify-content: center;
     align-items: center;
     position: relative;
+    right:20px;
     width: 64px;
     height: 64px;
     border-radius: 50%;
