--- a/src/Pages/styles.scss
+++ b/src/Pages/styles.scss
@@ -7,28 +7,59 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .body-text {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: #555a69;
+    padding: 35px;
+    line-height: 40px;
+  }
+  .input-pos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+    gap: 30px;
+    padding-bottom:30px;
+  }
+
+  .error-msg-border {
+    border: 1px solid red;
+  }
+  
+  .input-email {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+  }
+  .input-row {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 10px;
+    .label{
+      color: #B2BECC;
+      font-size: 18px;
+      font-family: Inter;
+      font-weight: bold;
+      padding: 5px;
+    }
+    .radio-pos{
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      width: 400px;
+      gap: 30px;
+    }
+  }
+
 }
 
-.input-pos {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 400px;
-  gap: 30px;
-}
-.input-email {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  width: 400px;
-}
 
-.body-text {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 700;
-  font-size: 30px;
-  color: #555a69;
-  padding: 35px;
-  line-height: 40px;
-}
+
+
+
+
