--- a/src/Components/RadioButtonComponent/styles.scss
+++ b/src/Components/RadioButtonComponent/styles.scss
@@ -1,10 +1,14 @@
 .radio-input {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 40px;
   border-radius: 27px;
   background: #ffffff;
   border: 1px solid #1e85fe;
   width: 80%;
+  .radio {
+    position: relative;
+    left: 20px;
+  }
 }
