--- a/src/Components/TextInputComponent/styles.scss
+++ b/src/Components/TextInputComponent/styles.scss
@@ -10,7 +10,6 @@
     border-radius: 27px;
     background: #ffffff;
     border: 1px solid #1e85fe;
-  
   }
   .input::placeholder {
     color: #d3d3d3;
@@ -23,10 +22,8 @@
     font-family: "Inter";
     font-style: normal;
     font-weight: 400;
-    font-size: 11px;
+    font-size: 12px;
+    margin-top: 5px;
     display: flex;
   }
- 
 }
-
-
