--- a/src/Pages/styles.scss
+++ b/src/Pages/styles.scss
@@ -22,13 +22,13 @@
     align-items: center;
     width: 400px;
     gap: 30px;
-    padding-bottom:30px;
+    padding-bottom: 30px;
   }
 
   .error-msg-border {
     border: 1px solid red;
   }
-  
+
   .input-email {
     display: flex;
     justify-content: space-between;
@@ -40,26 +40,31 @@
     flex-direction: column;
     align-items: flex-start;
     margin-bottom: 10px;
-    .label{
-      color: #B2BECC;
+    .label {
+      color: #b2becc;
       font-size: 18px;
       font-family: Inter;
       font-weight: bold;
       padding: 5px;
     }
-    .radio-pos{
+    .radio-pos {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      // justify-content: space-between;
+      // align-items: center;
+
       width: 400px;
       gap: 30px;
     }
+    .radio-text {
+      position: relative;
+      left: 48px;
+      bottom: 29px;
+      font-family: Inter;
+
+      .radio-female {
+        position: relative;
+        left: 182px;
+      }
+    }
   }
-
 }
-
-
-
-
-
-
