--- a/src/Styles/Variables.scss
+++ b/src/Styles/Variables.scss
@@ -1,6 +1,12 @@
 /*-------------COLORS-------------------*/
-$white: #ffffff;
-$lightgray: lightgray;
-$lightpurple: #ede9fa;
-$purple: #6b21a8;
-$black: #334155;
+$color-background: #ffffff;
+$color-previous-button: #b2becc;
+$color-title: #555a69;
+$color-error: #ff0000;
+$color-input-border: #1e85fe;
+$color-cyrcle-border: #d1d1d1;
+$color-text: #000000;
+$color-placeholder: #d3d3d3;
+
+/*------------COMPONENT VARIABLES------------*/
+$input-radius: 27px;
