--- a/src/Styles/FormInput.scss
+++ b/src/Styles/FormInput.scss
@@ -1,11 +1,213 @@
 @import "Variables.scss";
 
-// .form {
-//   width: 570px;
-//   height: 670px;
-//   background-color: $white;
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: center;
-//   align-items: center;
-// }
+.form {
+  width: 570px;
+  height: 670px;
+  background-color: $color-background;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  .body-text {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30px;
+    color: $color-title;
+    padding: 35px;
+    line-height: 40px;
+  }
+  .input-pos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+    gap: 30px;
+    padding-bottom: 30px;
+  }
+
+  .error-msg-border {
+    border: 1px solid $color-error;
+  }
+
+  .input-email {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 400px;
+  }
+  .input-row {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 10px;
+    .label {
+      color: $color-previous-button;
+      font-size: 18px;
+      font-family: Inter;
+      font-weight: bold;
+      padding: 5px;
+    }
+    .radio-pos {
+      display: flex;
+      width: 400px;
+      gap: 30px;
+    }
+    .radio-text {
+      position: relative;
+      left: 48px;
+      bottom: 29px;
+      font-family: Inter;
+
+      .radio-female {
+        position: relative;
+        left: 182px;
+      }
+    }
+  }
+
+  .btn-pos {
+    padding: 60px;
+    position: relative;
+    bottom: 30px;
+
+    .btn {
+      background: $color-input-border;
+      border: 1px solid $color-cyrcle-border;
+      border-radius: $input-radius;
+      width: 408px;
+      height: 54px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-family: "Inter";
+      font-weight: 600;
+      font-size: 18px;
+      color: $color-background;
+      cursor: pointer;
+    }
+
+    .arrow {
+      position: relative;
+      left: 5px;
+    }
+  }
+  .section {
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-top: 100px;
+
+    .btn-previous {
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
+      color: $color-previous-button;
+
+      .arrow {
+        position: relative;
+        top: 2px;
+        margin-right: 8px;
+      }
+
+      .btn-text {
+        font-family: "Inter";
+        font-size: 14px;
+        font-weight: 700;
+        color: $color-previous-button;
+      }
+    }
+
+    .circle {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: relative;
+      right: 20px;
+      width: 64px;
+      height: 64px;
+      border-radius: 50%;
+      border: 2px solid $color-cyrcle-border;
+
+      .circle-text {
+        font-family: "Inter";
+        font-size: 22px;
+        font-weight: 700;
+        color: $color-text;
+      }
+    }
+
+    .btn-reset {
+      border: none;
+      cursor: pointer;
+      background-color: transparent;
+
+      .btn-text-reset {
+        font-family: "Inter";
+        font-size: 14px;
+        font-weight: 700;
+        color: $color-input-border;
+      }
+    }
+  }
+  .radio-input {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    height: 40px;
+    border-radius: $input-radius;
+    background: $color-background;
+    border: 1px solid $color-input-border;
+    width: 80%;
+    .radio {
+      position: relative;
+      left: 20px;
+    }
+  }
+  .select-pos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // width: 580px;
+    .input-select {
+      color: $color-placeholder;
+      background-color: $color-background;
+      height: 45px;
+      border-radius: $input-radius;
+      border: 1px solid $color-input-border;
+      width: 80%;
+      padding-left: 15px;
+      width: 460px;
+    }
+  }
+  .input-form {
+    flex: 1;
+    width: 80%;
+    .input {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 40px;
+      border-radius: $input-radius;
+      background: $color-background;
+      border: 1px solid $color-input-border;
+    }
+    .input::placeholder {
+      color: $color-placeholder;
+      padding-left: 20px;
+      font-size: 14px;
+      font-weight: 500;
+    }
+    .text-error {
+      color: $color-error;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      margin-top: 5px;
+      display: flex;
+    }
+  }
+}
